--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,34 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: btc-stores
+  host: localhost
   pool: 5
   timeout: 5000
+  username: root
+  password: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: btc-stores
+  host: localhost
   pool: 5
   timeout: 5000
+  username: root
+  password: root
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: d79hqf3475ej90
   pool: 5
   timeout: 5000
+  username: ppgeyhwxtdvhjg
+  password: 3AaeoNbUyVv1VRgPfFlESzoHob
+  host: ec2-184-72-238-68.compute-1.amazonaws.com
