--- a/test/fixtures/countries.yml
+++ b/test/fixtures/countries.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
+  short_name: MyString
   name: MyString
 
 two:
+  short_name: MyString
   name: MyString
